# kernel

./: .gitignore  Cargo.toml  _Makefile  build.rs  flake.nix  linker.ld  x86_64-unknown-none.json  x86_64-unknown-venix.json
.cargo/: config.toml
src/: allocator.rs  driver.rs  gdt.rs  interrupts.rs  main.rs  printk.rs
src/console/: mod.rs
src/dma/: arena.rs  buffer.rs  mod.rs
src/drivers/: console.rs  hpet.rs  ide.rs  mod.rs  pcie.rs  usb.rs
src/drivers/ide/: #busmaster.rs#  controller.rs  ide.rs  mod.rs
src/drivers/usb/: #usb.rs#  .#usb.rs  hid.rs  mod.rs  protocol.rs  uhci.rs  usb.rs  usbdevice.rs
src/drivers/usbhid/: mod.rs  protocol.rs
src/fs/: fat.rs
src/fs/fat/: fat1216.rs  mod.rs
src/interrupts/: idt.rs  io_apic.rs  local_apic.rs  mod.rs
src/memory/: frame_allocator.rs  mod.rs  page_allocator.rs  user_address_space.rs
src/process/: mod.rs
src/scheduler/: #mod.rs#  .#mod.rs  elf_loader.rs  mod.rs  process_waker.rs  signal.rs
src/sys/: acpi.rs  block.rs  ioctl.rs  mod.rs  syscall.rs  vfs.rs
src/sys/acpi/: acpi_lock.rs  interrupts.rs  mod.rs  namespace.rs  resources.rs  tables.rs  uacpi.rs
src/utils/: async_kcall.rs  mod.rs  vector_map.rs
src/vfs/: fifo.rs  filesystem.rs  mod.rs  mount.rs  traverse.rs
uacpi/: wrapper.h
uacpi/include/uacpi/platform/: config.h
