[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Connor Wood"]

[dependencies]
bootloader_api = "0.11"
printk = "0.3"
log = "0.4"
x86_64 = "0.15"
spin = "0.9"
linked_list_allocator = "0.10"
fixed = "1.28"
raw-cpuid = "11.2"

[dependencies.conquer-once]
version = "0.4.0"
features = []
default-features = false

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]
