[package]
name = "kernel"
version = "0.2.0"
edition = "2021"
authors = ["Connor Wood"]

[dependencies]
log = "0.4"
x86_64 = "0.15"
spin = "0.9"
linked_list_allocator = "0.10"
fixed = "1.28"
raw-cpuid = "11.2"
acpi = "5.0"
aml = "0.16"
pic8259 = "0.11"
paste = "1.0"
noto-sans-mono-bitmap = "0.3"
pci_types = "0.10"
bit_field = "0.10"
limine = "0.3"

[dependencies.itertools]
version = "0.13"
features = ["use_alloc"]
default-features = false

[dependencies.conquer-once]
version = "0.4.0"
features = []
default-features = false

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[dependencies.uuid]
version = "1.11"
default-features = false
